# glissues

./: AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: app.rs  background.rs  config.rs  editor.rs  gitlab.rs  main.rs  markdown.rs  model.rs  theme.rs  ui.rs
