[package]
name = "glissues"
version = "0.0.6"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6.0"
pulldown-cmark = "0.12"
ratatui = "0.30"
ratatui-themes = { version = "0.2", features = ["widgets"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
urlencoding = "2.1"
